# nodes_graph

./: .gitmodules  README.md
examples/app_sdl3/: CMakeLists.txt
examples/app_sdl3/src/: input.h  main.cpp
examples/app_sdl3/src/nodes/: action_node.h  connector_in_node.h  connector_out_node.h  entry_node.h  exit_node.h  responses_node.h  speech_node.h
src/: commands.h  guid.h  literals.h  node.cpp  node.h  node_connection.cpp  node_connection.h  node_slot.cpp  node_slot.h  nodes_graph.cpp  nodes_graph.h  nodes_graph_settings.h
src/commands/: create_child_node_command.h  create_connection_command.h  create_node_command.h  delete_child_node_command.h  delete_connection_command.h  delete_node_command.h  edit_connection_command.h  edit_value_command.h  move_child_node_command.h  move_node_command.h
